objects/SalesAgreement.object
<CustomObject>
    <fields>
        <fullName>Actuals_Retrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actuals Retrieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Product_Discount__c</fullName>
        <description>Average Product Discount. Utilizing Sum of Discount and Total Number of Products</description>
        <formula>Sum_of_Discount__c  /  Total_Number_of_Products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloned_Versions__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How many times Agreements have been changed since the original cloned SA</description>
        <label>Cloned Versions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to map Sales Agreement to TCRM Analytics for Demo | MFG Analytics FY23 dataflow</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PreviousID__c</fullName>
        <label>PreviousID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Quote that this Sales Agreement is related to.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Sales Agreements</relationshipLabel>
        <relationshipName>Sales_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_of_Discount__c</fullName>
        <description>This field is used a part of an equation to get the average discount of Products on the Sales Agreement. We will use this as criteria for a Sales Agreement Approval. Also creating a Total Number Of Products field as the other part of the equation.</description>
        <label>Sum of Discount</label>
        <summarizedField>SalesAgreementProduct.DiscountPercentage</summarizedField>
        <summaryForeignKey>SalesAgreementProduct.SalesAgreementId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Products__c</fullName>
        <description>This field is used a part of an equation to get the average discount of Products on the Sales Agreement. We will use this as criteria for a Sales Agreement Approval. Also creating a Sum_of_Discount field as the other part of the equation.</description>
        <label>Total Number of Products</label>
        <summaryForeignKey>SalesAgreementProduct.SalesAgreementId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All_SalesAgreements</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Activated,Cancelled</value>
        </filters>
        <filters>
            <field>Actuals_Retrieved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PreviousID__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Agreements</label>
    </listViews>
    <listViews>
        <fullName>My_SalesAgreements</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <filterScope>Everything</filterScope>
        <label>My Agreements</label>
    </listViews>
    <listViews>
        <fullName>Sales_Agreements_Excluding_Cancelled</fullName>
        <columns>Owner</columns>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Expired,Cancelled,UnderRevision,Rejected,Discarded</value>
        </filters>
        <label>Sales Agreements Excluding Cancelled</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>